Przycisk nawigujący do platformy booksy. Navbar strony.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,11 @@
-<!--<div class="sticky top-0">-->
-<!--  <app-navbar />-->
-<!--</div>-->
+<div class="fixed w-full z-50">
+  <app-navbar />
+</div>
 
 <app-hero-section />
+
+<div class="fixed right-4 bottom-4">
+  <app-booksy />
+</div>
 
 <router-outlet />
