Przycisk nawigujący do platformy booksy. Navbar strony.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
 <app-hero-section />
 
 <div class="fixed right-4 bottom-4">
-  <app-booksy />
+  <app-booksy [withLabel]="true" />
 </div>
 
 <router-outlet />
