--- a/src/app/sections/hero-section/hero-section.html
+++ b/src/app/sections/hero-section/hero-section.html
@@ -1,10 +1,10 @@
 <app-fullscreen>
-  <div class="bg-pink-400 h-full relative">
+  <div class="h-full relative">
     <video [playbackRate]="0.8" autoplay class="absolute inset-0 size-full object-cover" loop muted>
       <source src="/video/hero.mp4" />
     </video>
 
-    <div class="bg-(--app-primary) absolute inset-0 opacity-85"></div>
+    <div class="bg-(--app-primary) absolute inset-0 opacity-80"></div>
 
     <div class="absolute px-4 flex flex-col justify-center inset-0 text-white leading-relaxed">
       <div class="mx-auto container">
