--- a/src/app/ui/menu-item/menu-item.html
+++ b/src/app/ui/menu-item/menu-item.html
@@ -1,1 +1,4 @@
-{{ item().label }}
+<div class="menu-item">
+  <div class="menu-item__label">{{ item().label }}</div>
+  <div class="menu-item__indicator"></div>
+</div>
