--- a/src/app/ui/navbar/navbar.html
+++ b/src/app/ui/navbar/navbar.html
@@ -1,8 +1,14 @@
-<div class="container items-center flex mx-auto">
-  <div class="ms-auto px-4 py-12 uppercase text-white font-normal">
+<div class="container items-center flex mx-auto py-4 px-4">
+  <div class="me-auto">
+    <a class="size-12 inline-block" href="/">
+      <img ngSrc="/images/logo.webp" alt="Logo Pelvi-Active" height="599" width="524" />
+    </a>
+  </div>
+
+  <div class="ms-auto px-4">
     <div class="grid grid-flow-col gap-10">
       @for (item of items(); track item.id) {
-        <div>{{ item.label }}</div>
+        <app-menu-item [item]="item" />
       }
     </div>
   </div>
