--- a/src/app/ui/menu-item/menu-item.html
+++ b/src/app/ui/menu-item/menu-item.html
@@ -1,4 +1,20 @@
 <div class="menu-item">
-  <div class="menu-item__label">{{ item().label }}</div>
-  <div class="menu-item__indicator"></div>
+  <div
+    class="menu-item__label"
+    [class.text-(--app-primary)]="isPrimary()"
+    [class.text-white]="isDefault()"
+  >
+    {{ item().label }}
+  </div>
+
+  <div
+    class="menu-item__indicator"
+    [ngClass]="{
+      'left-0': !withCenteredIndicator(),
+      'left-1/2': withCenteredIndicator(),
+      '-translate-1/2': withCenteredIndicator(),
+    }"
+    [class.bg-(--app-primary)]="isPrimary()"
+    [class.bg-white]="isDefault()"
+  ></div>
 </div>
