Praca nad sekcją "O mnie"

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
 </div>
 
 <app-hero-section />
-<!--<app-about-me-section />-->
+<app-about-me-section />
 
 <div class="fixed right-4 bottom-4">
   <app-booksy [withLabel]="true" />
