--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,6 +4,7 @@
 
 <app-hero-section />
 <app-about-me-section />
+<app-courses-section />
 
 <div class="fixed right-4 bottom-4">
   <app-booksy [withLabel]="true" />
