--- a/src/app/sections/about-me-section/about-me-section.html
+++ b/src/app/sections/about-me-section/about-me-section.html
@@ -1,7 +1,8 @@
-<div class="container h-full mx-auto py-24 px-4 flex">
+<app-section-container>
   <div class="grid xl:grid-cols-2 my-auto gap-12">
     <div class="flex flex-col justify-center">
       <img
+        priority
         class="shadow-lg rounded-xl"
         ngSrc="/images/malgorzata_lelen.webp"
         alt="Małgorzata Leleń"
@@ -26,4 +27,4 @@
       </div>
     </div>
   </div>
-</div>
+</app-section-container>
