Dodanie sekcji "Cennik"

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,6 +5,8 @@
 <app-hero-section />
 <app-about-me-section />
 <app-courses-section />
+<app-offer-section />
+<app-prices-section />
 
 <div class="fixed right-4 bottom-4">
   <app-booksy [withLabel]="true" />
