Dodanie sekcji kontakt.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,6 +7,7 @@
 <app-courses-section />
 <app-offer-section />
 <app-prices-section />
+<app-contact-section />
 
 <div class="fixed right-4 bottom-4">
   <app-booksy [withLabel]="true" />
