--- a/src/app/sections/offer-section/offer-section.html
+++ b/src/app/sections/offer-section/offer-section.html
@@ -1,5 +1,5 @@
-<div class="max-h-[72rem] h-screen relative">
-  <div class="img-stairs absolute inset-0">
+<div class="max-h-full h-screen relative">
+  <div class="absolute inset-0">
     <img
       ngSrc="/images/offer_1.jpg"
       class="size-full object-cover"
