--- a/src/app/sections/about-me-section/about-me-section.html
+++ b/src/app/sections/about-me-section/about-me-section.html
@@ -4,10 +4,10 @@
       <img
         priority
         class="shadow-lg rounded-xl"
-        ngSrc="/images/malgorzata_lelen.webp"
+        ngSrc="/images/7L7A5406.webp"
         alt="Małgorzata Leleń"
-        height="1024"
-        width="1536"
+        height="1365"
+        width="2048"
       />
     </div>
 
