--- a/src/app/sections/prices-section/prices-section.html
+++ b/src/app/sections/prices-section/prices-section.html
@@ -10,7 +10,7 @@
       <div class="text-white">
         @for (service of services(); track service.id) {
           <div
-            class="grid grid-cols-12 items-center p-5"
+            class="grid grid-cols-12 gap-4 items-center p-7"
             [class.border-b]="!$last"
             [class.bg-(--app-primary-dark)]="$odd"
           >
