Praca nad sekcją stopki.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
 <app-offer-section />
 <app-prices-section />
 <app-contact-section />
+<app-footer-section />
 
 <div class="fixed right-4 bottom-4">
   <app-booksy [withLabel]="true" />
