--- a/src/app/sections/contact-section/contact-section.html
+++ b/src/app/sections/contact-section/contact-section.html
@@ -1,4 +1,4 @@
-<div class="bg-(--app-dark)">
+<div class="bg-(--app-dark) pb-10">
   <app-section-container>
     <div class="flex flex-col relative overflow-hidden">
       <div class="mx-auto">
@@ -7,13 +7,13 @@
         </app-section-title>
       </div>
 
-      <div class="grid items-center xl:grid-cols-2 gap-6 text-white mt-6">
+      <div class="grid items-center xl:grid-cols-2 gap-6 text-white mt-10">
         <div class="flex gap-4 flex-col">
           <div class="font-bold">
             Zapraszam do skorzystania z kompleksowej fizjoterapii dolegliwości kobiecych:
           </div>
 
-          <ul class="list-disc">
+          <ul class="list-disc list-inside leading-loose">
             <li>nietrzymanie moczu,</li>
             <li>obniżenie narządów,</li>
             <li>rozejście mięśnia prostego brzucha,</li>
@@ -28,22 +28,24 @@
             class="flex gap-2 items-center"
           >
             <app-contact-icon name="geo-alt-fill" />
-            <div class="underline">ul. Nowy Świat 23A, 20-418 Lublin (wejście w prześwicie)</div>
+            <div class="hover:underline">
+              ul. Nowy Świat 23A, 20-418 Lublin (wejście w prześwicie)
+            </div>
           </a>
 
           <a href="https://pelvi-active.pl" class="flex gap-2 items-center">
             <app-contact-icon name="browser-chrome" />
-            <div class="underline">pelvi-active.pl</div>
+            <div class="hover:underline">pelvi-active.pl</div>
           </a>
 
           <a href="mailto:pelviactive@gmail.com" class="flex gap-2 items-center">
             <app-contact-icon name="envelope-fill" />
-            <div class="underline">pelviactive&commat;gmail.com</div>
+            <div class="hover:underline">pelviactive&commat;gmail.com</div>
           </a>
 
           <a href="tel:512 358 893" class="flex gap-2 items-center">
             <app-contact-icon name="telephone-fill" />
-            <div class="underline">512 358 893</div>
+            <div class="hover:underline">512 358 893</div>
           </a>
         </div>
       </div>
