--- a/src/app/sections/about-me-section/about-me-section.html
+++ b/src/app/sections/about-me-section/about-me-section.html
@@ -14,7 +14,7 @@
     <div class="flex flex-col justify-center gap-6">
       <app-section-title>O mnie</app-section-title>
 
-      <div class="text-lg lg:text-xl font-light leading-relaxed text-justify">
+      <div class="mt-4 text-lg lg:text-xl font-light leading-relaxed text-justify">
         Nazywam się Małgorzata Leleń. Ukończyłam studia magisterskie na Uniwersytecie Medycznym w
         Lublinie na kierunku Fizjoterapia. Zajmuję się profilaktyką oraz leczeniem dolegliwości
         ginekologicznych i urologicznych u kobiet na każdym etapie ich życia, a w szczególności
