--- a/src/app/sections/prices-section/prices-section.html
+++ b/src/app/sections/prices-section/prices-section.html
@@ -7,10 +7,10 @@
         </app-section-title>
       </div>
 
-      <div class="text-white">
+      <div class="text-white mt-4">
         @for (service of services(); track service.id) {
           <div
-            class="grid grid-cols-12 gap-4 items-center p-7"
+            class="grid grid-cols-12 gap-4 items-center p-6"
             [class.border-b]="!$last"
             [class.bg-(--app-primary-dark)]="$odd"
           >
