--- a/src/app/sections/offer-section/offer-section.html
+++ b/src/app/sections/offer-section/offer-section.html
@@ -1,11 +1,63 @@
-<div class="max-h-full h-screen relative">
-  <div class="absolute inset-0">
-    <img
-      ngSrc="/images/offer_1.jpg"
-      class="size-full object-cover"
-      alt="1"
-      height="1280"
-      width="1920"
-    />
+<app-reveal-stagger [src]="'/images/7L7A5386_1.webp'">
+  <div class="h-full w-full flex justify-center items-center flex-col relative">
+    <app-section-title>
+      <div class="text-center">Fizjoterapia w ciąży</div>
+    </app-section-title>
+
+    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+      <li>łagodzenie bólu w obrębie kręgosłupa i miednicy</li>
+      <li>ból spojenia łonowego</li>
+      <li>nauka świadomej aktywacji dna miednicy</li>
+      <li>bezpieczna aktywność fizyczna</li>
+      <li>masaż kobiet w ciąży</li>
+      <li>terapia obrzęków</li>
+      <li>terapia rozstępu mięśni prostych brzucha</li>
+    </ul>
   </div>
-</div>
+</app-reveal-stagger>
+
+<app-reveal-stagger [src]="'/images/7L7A5353_1.webp'">
+  <div class="h-full w-full flex justify-center items-center flex-col">
+    <app-section-title>
+      <div class="text-center">Fizjoterapia po porodzie</div>
+    </app-section-title>
+
+    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+      <li>rozejście mięśnia prostego brzucha</li>
+      <li>praca z blizną po cesarskim cięciu lub nacięciu krocza</li>
+      <li>reedukacja mięśni dna miednicy</li>
+      <li>dobór ćwiczeń ułatwiających bezpieczny powrót do sprawności</li>
+    </ul>
+  </div>
+</app-reveal-stagger>
+
+<app-reveal-stagger [src]="'/images/7L7A5238.webp'">
+  <div class="h-full w-full flex justify-center items-center flex-col">
+    <app-section-title>
+      <div class="text-center">Fizjoterapia uroginekologiczna</div>
+    </app-section-title>
+
+    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+      <li>nietrzymanie moczu</li>
+      <li>parcia naglące</li>
+      <li>obniżenie narządu rodnego</li>
+      <li>bolesne współżycie</li>
+      <li>bolesne miesiączki</li>
+      <li>endometrioza</li>
+    </ul>
+  </div>
+</app-reveal-stagger>
+
+<app-reveal-stagger [src]="'/images/7L7A5406.webp'">
+  <div class="h-full w-full flex justify-center items-center flex-col">
+    <app-section-title>
+      <div class="text-center">Profilaktyka zaburzeń dna miednicy</div>
+    </app-section-title>
+
+    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+      <li>nauka prawidłowej aktywacji mięśni dna miednicy</li>
+      <li>praca nad świadomością własnego ciała</li>
+      <li>praca z oddechem</li>
+    </ul>
+  </div>
+</app-reveal-stagger>
