Praca nad sekcją z ofertą.

--- a/src/app/sections/offer-section/offer-section.html
+++ b/src/app/sections/offer-section/offer-section.html
@@ -1,10 +1,8 @@
-<app-reveal-stagger [src]="'/images/7L7A5386_1.webp'">
-  <div class="h-full w-full flex justify-center items-center flex-col relative">
-    <app-section-title>
-      <div class="text-center">Fizjoterapia w ciąży</div>
-    </app-section-title>
+<app-offer-entry imageSrc="/images/7L7A5386_1.webp">
+  <div title>Fizjoterapia w ciąży</div>
 
-    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+  <div content>
+    <ul>
       <li>łagodzenie bólu w obrębie kręgosłupa i miednicy</li>
       <li>ból spojenia łonowego</li>
       <li>nauka świadomej aktywacji dna miednicy</li>
@@ -14,30 +12,26 @@
       <li>terapia rozstępu mięśni prostych brzucha</li>
     </ul>
   </div>
-</app-reveal-stagger>
+</app-offer-entry>
 
-<app-reveal-stagger [src]="'/images/7L7A5353_1.webp'">
-  <div class="h-full w-full flex justify-center items-center flex-col">
-    <app-section-title>
-      <div class="text-center">Fizjoterapia po porodzie</div>
-    </app-section-title>
+<app-offer-entry imageSrc="/images/7L7A5353_1.webp" [reverse]="true">
+  <div title>Fizjoterapia po porodzie</div>
 
-    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+  <div content>
+    <ul>
       <li>rozejście mięśnia prostego brzucha</li>
       <li>praca z blizną po cesarskim cięciu lub nacięciu krocza</li>
       <li>reedukacja mięśni dna miednicy</li>
       <li>dobór ćwiczeń ułatwiających bezpieczny powrót do sprawności</li>
     </ul>
   </div>
-</app-reveal-stagger>
+</app-offer-entry>
 
-<app-reveal-stagger [src]="'/images/7L7A5238.webp'">
-  <div class="h-full w-full flex justify-center items-center flex-col">
-    <app-section-title>
-      <div class="text-center">Fizjoterapia uroginekologiczna</div>
-    </app-section-title>
+<app-offer-entry imageSrc="/images/7L7A5238.webp">
+  <div title>Fizjoterapia uroginekologiczna</div>
 
-    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+  <div content>
+    <ul>
       <li>nietrzymanie moczu</li>
       <li>parcia naglące</li>
       <li>obniżenie narządu rodnego</li>
@@ -46,18 +40,16 @@
       <li>endometrioza</li>
     </ul>
   </div>
-</app-reveal-stagger>
+</app-offer-entry>
 
-<app-reveal-stagger [src]="'/images/7L7A5406.webp'">
-  <div class="h-full w-full flex justify-center items-center flex-col">
-    <app-section-title>
-      <div class="text-center">Profilaktyka zaburzeń dna miednicy</div>
-    </app-section-title>
+<app-offer-entry imageSrc="/images/7L7A5406.webp" [reverse]="true">
+  <div title>Profilaktyka zaburzeń dna miednicy</div>
 
-    <ul class="font-light mt-6 text-lg lg:text-2xl text-center leading-normal px-2">
+  <div content>
+    <ul>
       <li>nauka prawidłowej aktywacji mięśni dna miednicy</li>
       <li>praca nad świadomością własnego ciała</li>
       <li>praca z oddechem</li>
     </ul>
   </div>
-</app-reveal-stagger>
+</app-offer-entry>
