--- a/src/app/ui/components/booksy/booksy.html
+++ b/src/app/ui/components/booksy/booksy.html
@@ -9,7 +9,7 @@
     @if (withCloseButton()) {
       <button
         (click)="handleCloseClick($event)"
-        class="absolute -right-2 -top-2 cursor-pointer rounded-full text-sm text-white bg-(--app-primary-dark) size-6 flex justify-center items-center"
+        class="absolute -right-2 -top-2 cursor-pointer rounded-full text-xs text-white bg-(--app-primary-dark) size-5 flex justify-center items-center"
       >
         <app-icon name="x-lg" />
       </button>
