--- a/src/app/ui/components/navbar/navbar.html
+++ b/src/app/ui/components/navbar/navbar.html
@@ -47,7 +47,7 @@
 }
 
 <ng-template #logoTemplateRef>
-  <a class="size-12 inline-block" href="/public">
+  <a class="size-12 inline-block" href="/">
     <img ngSrc="/images/logo.webp" alt="Logo Pelvi-Active" height="599" width="524" />
   </a>
 </ng-template>
