--- a/src/app/ui/components/reveal-stagger/reveal-stagger.scss
+++ b/src/app/ui/components/reveal-stagger/reveal-stagger.scss
@@ -1,17 +1,9 @@
 @reference 'tailwindcss';
 
 .column {
-  @apply bg-white/96 h-full scale-y-0 origin-bottom opacity-0;
+  @apply bg-(--app-primary)/60 h-full origin-bottom scale-y-100 opacity-100;
 
   &.visible {
-    @apply scale-y-100 opacity-100 transition-transform;
-  }
-}
-
-.content {
-  @apply opacity-0;
-
-  &.visible {
-    @apply opacity-100 transition-opacity;
+    @apply scale-y-0  transition-transform;
   }
 }
