Nawigacja między sekcjami. Metaopisy strony.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,13 +2,33 @@
   <app-navbar />
 </div>
 
-<app-hero-section />
-<app-about-me-section />
-<app-courses-section />
-<app-offer-section />
-<app-prices-section />
-<app-contact-section />
-<app-footer-section />
+<div id="567752ac-8d2d-41ea-bbf8-90dd87d8385e">
+  <app-hero-section />
+</div>
+
+<div id="f691266a-9ea8-4e75-9c99-2ad92f93c3c8">
+  <app-about-me-section />
+</div>
+
+<div id="acd4354b-2d47-4ba6-a6df-6b36e7fea6d8">
+  <app-courses-section />
+</div>
+
+<div id="1a5cd9c7-76b8-4ee7-ab7c-b1e55c869724">
+  <app-offer-section />
+</div>
+
+<div id="a4fa47d5-a2c9-4430-98fb-22290cd88499">
+  <app-prices-section />
+</div>
+
+<div id="b060abf2-70ff-4e72-bb4b-e72a4ddefc13">
+  <app-contact-section />
+</div>
+
+<div id="adc29666-bef9-4c26-af39-efc1a57ea1e5">
+  <app-footer-section />
+</div>
 
 <div class="fixed right-4 bottom-4">
   <app-booksy [withLabel]="true" />
