--- a/src/app/sections/about-me-section/about-me-section.html
+++ b/src/app/sections/about-me-section/about-me-section.html
@@ -23,7 +23,9 @@
       </div>
 
       <div>
-        <app-button>Kursy i szkolenia</app-button>
+        <a href="#acd4354b-2d47-4ba6-a6df-6b36e7fea6d8">
+          <app-button>Kursy i szkolenia</app-button>
+        </a>
       </div>
     </div>
   </div>
