--- a/src/app/ui/components/button/button.html
+++ b/src/app/ui/components/button/button.html
@@ -1,5 +1,6 @@
-<a
+<button
+  (click)="handleClick()"
   class="cursor-pointer inline-flex bg-(--app-primary) text-white px-4 py-3 shadow-md rounded-sm uppercase"
 >
   <ng-content />
-</a>
+</button>
