--- a/src/app/ui/components/menu-item/menu-item.scss
+++ b/src/app/ui/components/menu-item/menu-item.scss
@@ -1,7 +1,7 @@
 @reference "tailwindcss";
 
 .menu-item {
-  @apply relative;
+  @apply relative inline-flex;
 
   &__label {
     @apply uppercase font-normal;
